# architecture

./: .editorconfig  .gitignore  .licensure.yml  .tool-versions  Cargo.toml  Dockerfile  Header.txt  README.md  architecture.code-workspace  cliff.toml  rust-toolchain
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  nightly.yml
rcna-core/: Cargo.toml  README.md
rcna-core/src/: app.rs  lib.rs
rcna-core/src/app/: context.rs  git.rs  mod.rs  version.rs
rcna-core/src/kube/: cluster_role.rs  cluster_role_binding.rs  config_map.rs  credentials.rs  cron_job.rs  deployment.rs  mod.rs  namespace.rs  secret.rs  service.rs  service_account.rs
rcna-core/src/kube/compute/: mod.rs
rcna-core/src/kube/development/: mod.rs
rcna-core/src/kube/mlops/: mod.rs
rcna-core/src/kube/storage/: mod.rs
rcna-core/src/provider/: mod.rs
rcna-core/src/provider/aws/: credentials.rs  mod.rs
rcna-core/src/provider/digitalocean/storage/: mod.rs
rcna-core/src/provider/hetzner/observability/: mod.rs
rcna-core/src/provider/kube/: credentials.rs  mod.rs
rcna-deployment/: README.md
rcna-deployment/bicep-azure-rcna/: Cargo.toml  README.md
rcna-deployment/cdk-aws-rcna/: Cargo.toml  README.md
rcna-deployment/pulumi-aws-cnra/: Cargo.toml  README.md
rcna-deployment/pulumi-azure-cnra/: Cargo.toml  README.md
rcna-deployment/pulumi-gcp-cnra/: Cargo.toml  README.md
rcna-deployment/terraform-aws-rcna/: Cargo.toml  README.md
rcna-deployment/terraform-azure-rcna/: Cargo.toml  README.md
rcna-deployment/terraform-digitalocean-rcna/: Cargo.toml  README.md
rcna-deployment/terraform-gcp-rcna/: Cargo.toml  README.md
rcna-deployment/terraform-hetzner-rcna/: Cargo.toml  README.md
rcna-deployment/terraform-ovh-rcna/: Cargo.toml  README.md
rcna-deployment/terraform-vultr-rcna/: Cargo.toml  README.md
rcna-doc/: README.md  config.toml  create_translations.sh
rcna-doc/content/: _index.md
rcna-doc/content/contacts/: _index.md
rcna-doc/content/documentation/: _index.md
rcna-doc/content/legal/: agreement.md
rcna-doc/templates/: base.html
rcna-kube-compute/: Cargo.toml  README.md
rcna-kube-compute/src/: cluster_autoscaler.rs  descheduler.rs  karpenter.rs  karpenter_aws.rs  keda.rs  lib.rs  vpa.rs
rcna-kube-development/: Cargo.toml  README.md
rcna-kube-development/src/: theia.rs
rcna-kube-finops/: Cargo.toml  README.md
rcna-kube-gitops/: Cargo.toml  README.md
rcna-kube-mlops/: Cargo.toml  README.md
rcna-kube-networking/: Cargo.toml  README.md
rcna-kube-observability/: Cargo.toml  README.md
rcna-kube-provider/: Cargo.toml  README.md
rcna-kube-security/: Cargo.toml  README.md
rcna-kube-storage/: Cargo.toml  README.md
rcna-macro/: Cargo.toml  README.md  build.rs
rcna-macro/examples/: extract_pulumi_data.rs
rcna-portal/: Dockerfile  README.md  package.json
src/: main.rs
