[package]
name = "rcna_core"
description = "RCNA core"
documentation = "https://architecture.yarosh.dev/core"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

kube.workspace = true

k8s-openapi = { workspace = true, features = ["latest"] }

octocrab.workspace = true
tempfile.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
goldie.workspace = true

[lints]
workspace = true

[features]
skip_online_tests = []
skip_deployment_tests = []
