[package]
name = "rcna_core"
description = "RCNA core"
documentation = "https://architecture.yarosh.dev/core"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
# Macro
rcna_macro.workspace = true

# Async
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

# Kubernetes
kube.workspace = true
k8s-openapi = { workspace = true, features = ["latest"] }

# Templating
askama.workspace = true

# GitHub
octocrab.workspace = true

# Coding
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
semver.workspace = true

# Util
tempfile.workspace = true
envy.workspace = true

# Derive
# derive_more.workspace = true

# Error handling & observability
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
goldie.workspace = true

[lints]
workspace = true

[features]
skip_online_tests = []
skip_deployment_tests = []
