[package]
name = "rcna_kube_development"
description = "RCNA development tools deployment"
documentation = "https://architecture.yarosh.dev/development"
version.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
rcna_core.workspace = true

tokio = { workspace = true, features = ["full"] }
futures.workspace=true

anyhow.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true

[dev-dependencies]
goldie.workspace=true

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"

[features]
skip_online_tests = []
skip_deployment_tests = []
