[package]
name = "rcna_kube_finops"
description = "RCNA FinOps deployment"
documentation = "https://architecture.yarosh.dev/finops"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures.workspace=true

anyhow.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true

[dev-dependencies]
goldie.workspace=true

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"

[features]
skip_online_tests = []
skip_deployment_tests = []
