[package]
name = "rcna_kube_mlops"
description = "RCNA mlops deployment"
documentation = "https://architecture.yarosh.dev/mlops"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ['rlib']

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures.workspace=true

anyhow.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true

[dev-dependencies]
goldie.workspace=true

[lints]
workspace=true

[features]
skip_online_tests = []
skip_deployment_tests = []
