[package]
name = "terraform_digitalocean_rcna"
description = "RCNA Terraform DigitalOcean deployment testing suite"
documentation = "https://architecture.yarosh.dev/digitalocean"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "terraform_do_test"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
goldie.workspace = true

[lints]
workspace = true

[features]
skip_online_tests = []
skip_deployment_tests = []
