[package]
name = "terraform_hetzner_rcna"
description = "RCNA Terraform Hetzner deployment testing suite"
documentation = "https://architecture.yarosh.dev/hetzner"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "terraform_hetzner_test"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures.workspace=true

anyhow.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true

[dev-dependencies]
goldie.workspace=true

[lints]
workspace=true

[features]
skip_online_tests = []
skip_deployment_tests = []
